ASoC: elvees: Add MFBSP support
Issue: #MCOM03SW-937
Change-Id: I55e32459596b9bc98f662b3d2b2769565c301fab
Signed-off-by: Denis Ovchinnikov <dovchinnikov@elvees.com>
(cherry picked from commit d891062676752117f583fe4f9dc7ff42d75d7dac)

--- a/sound/soc/elvees/Kconfig
+++ b/sound/soc/elvees/Kconfig
@@ -6,3 +6,9 @@ config SND_SOC_ELVEES_TRUSTPHONE_WM8998
 	help
 	  Say Y or M if you want to add support for ELVEES Trustphone WM8998
 	  soundcard.
+
+config SND_SOC_ELVEES_MFBSP
+	tristate "ELVEES MFBSP support"
+	help
+	  Say Y or M if you want to add ELVEES Multi-Functional Buffered Serial
+	  Port (MFBSP) configured as i2s slave.
