pwm: Add pwm-mcom driver
The driver supports 4 ports and only OUTA channel for each port.

Issue: #MCOM03SW-1961
Issue: #MCOMBDRT-178
Change-Id: Ife3e4183becdeb5888d9b1d197b56d3522db0820
(cherry picked from commit <b1ac11061ef0> ("pwm: Add pwm-mcom driver"))

--- a/drivers/pwm/Kconfig
+++ b/drivers/pwm/Kconfig
@@ -264,6 +264,15 @@ config PWM_LPSS_PLATFORM
 	  To compile this driver as a module, choose M here: the module
 	  will be called pwm-lpss-platform.
 
+config PWM_MCOM
+	tristate "ELVEES MCom-03 PWM support"
+	depends on ARCH_MCOM03
+	help
+	  Generic PWM framework driver for the ELVEES MCom-03 PWM.
+
+	  To compile this driver as a module, choose M here: the module
+	  will be called pwm-mcom.
+
 config PWM_MESON
 	tristate "Amlogic Meson PWM driver"
 	depends on ARCH_MESON
