[media] ov2718: Add initial version
Supported revisions: 1C, 2A

Supported modes:

* 1920x1080 @ 30 FPS, 12-bit, 4 MIPI CSI lanes.
* 1280x720 @ 30 FPS, 12-bit, 4 MIPI CSI lanes.

Supported controls:

* V4L2_CID_GAIN
* V4L2_CID_EXPOSURE
* V4L2_CID_EXPOSURE_ABSOLUTE
* V4L2_CID_RED_BALANCE
* V4L2_CID_BLUE_BALANCE
* V4L2_CID_HFLIP
* V4L2_CID_VFLIP

Issue: #IPCAMSW-453
Issue: #MCOM02SW-1943
Change-Id: I89c21fecad012510b43d711bce6cc36dfd1d0999

--- a/drivers/media/i2c/soc_camera/Kconfig
+++ b/drivers/media/i2c/soc_camera/Kconfig
@@ -50,6 +50,12 @@ config SOC_CAMERA_OV2715
 	help
 	  This is a ov2715 camera driver
 
+config SOC_CAMERA_OV2718
+	tristate "ov2718 camera support"
+	depends on SOC_CAMERA && I2C
+	help
+	  This is a ov2718 camera driver
+
 config SOC_CAMERA_OV5642
 	tristate "ov5642 camera support"
 	depends on SOC_CAMERA && I2C
