ARM: mcom_defconfig: Enable OV2718 sensor driver
OV2718 sensor support is required for ECAM02DM.

Issue: #MCOM02SW-1941
Issue: #MCOM02SW-1943
Change-Id: I65572d4f634d40758d7bdd08db2300578cc960b7

--- a/arch/arm/configs/mcom_defconfig
+++ b/arch/arm/configs/mcom_defconfig
@@ -133,6 +133,7 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_ELVEES_AVICO=m
 CONFIG_SOC_CAMERA_OV2640=m
 CONFIG_SOC_CAMERA_OV2715=m
+CONFIG_SOC_CAMERA_OV2718=m
 CONFIG_SOC_CAMERA_OV5647=m
 CONFIG_SOC_CAMERA_OV772X=m
 CONFIG_SOC_CAMERA_TC358748=m
