gpio: dwapb: Move gpio/gpio-dwapb.c to pinctrl/ directory
Since most of the other implementations of pinctrl functionality are in
drivers/pinctrl/, so we should move gpio-dwapb into it and rename the
driver to gpio-dwapb-pinctrl.

This patch based on commit 605280895477 ("gpio: dwapb: Move
gpio/gpio-dwapb.c to pinctrl/ directory"), but slightly modified by
removing unnecessary includes("gpiolib.h" and "gpiolib-acpi.h").

Issue: #MCOM03SW-1621
Change-Id: I4185164d48c4c6f956708b8d0d247e6b90b5884c
Signed-off-by: Omar Al-Wadi <oalwadi@elvees.com>

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -198,7 +198,7 @@ CONFIG_SPI=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_MCP23S08=y
 CONFIG_GPIO_SYSFS=y
-CONFIG_GPIO_DWAPB=y
+CONFIG_PINCTRL_DWAPB=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_SENSORS_MR75202=y
