arm64: mcom03_defconfig: Enable input event interface support
Input event interface is required for mouse/keyboard support
from desktop environment.

Issue: #MCOM03SW-2102
Change-Id: I4a0634ce095db6577a5b65ca7cae1388aaa21c44
Signed-off-by: Denis Ovchinnikov <dovchinnikov@elvees.com>
(cherry picked from commit 191199430c7c85fd43b10401a52dcaba734665db)

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -237,6 +237,7 @@ CONFIG_ATH10K=m
 CONFIG_ATH10K_PCI=m
 CONFIG_INPUT_MOUSEDEV=m
 CONFIG_INPUT_JOYDEV=m
+CONFIG_INPUT_EVDEV=y
 CONFIG_MOUSE_APPLETOUCH=m
 CONFIG_MOUSE_BCM5974=m
 CONFIG_MOUSE_SYNAPTICS_USB=m
