--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -751,6 +751,12 @@ config SPI_SIFIVE
 	help
 	  This exposes the SPI controller IP from SiFive.
 
+config SPI_SILVACO_QSPI
+	bool "Silvaco QSPI driver"
+	help
+	  Enable Silvaco AXI QSPI Controller which is used to
+	  communicate with SPI flash devices.
+
 config SPI_SIRF
 	tristate "CSR SiRFprimaII SPI controller"
 	depends on SIRF_DMA
