arm64: mcom03_defconfig: Enable GPIO-connected LEDs support
ELV-MC03-SMARC has GPIO-connected LEDs.

Change-Id: I3f507e8cd636e418c495291110f6e034fbb6855f
Signed-off-by: Dmitriy Zagrebin <dzagrebin@elvees.com>
(cherry picked from commit 0ffef8a08a60b827acdb7b473a4a37fcb7d40cca)

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -430,6 +430,11 @@ CONFIG_MMC_USHC=m
 CONFIG_MMC_REALTEK_USB=m
 CONFIG_MEMSTICK=m
 CONFIG_MEMSTICK_REALTEK_USB=m
+CONFIG_LEDS_GPIO=m
+CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_TRIGGER_TIMER=m
+CONFIG_LEDS_TRIGGER_ONESHOT=m
+CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_ARM_ARCH_TIMER_EVTSTREAM is not set
 # CONFIG_FSL_ERRATUM_A008585 is not set
