drm/panel: Add XL6550050QM-30 MIPI DSI panel
XL6550050QM-30 is a 720x1600 TFT panel with MIPI DSI interface.

Issue: #MCOM03SW-1358
Change-Id: Idfcdbb6199e2452aa0f2f8563bc256f7b99cea37

--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -186,4 +186,12 @@ config DRM_PANEL_SITRONIX_ST7789V
 	  Say Y here if you want to enable support for the Sitronix
 	  ST7789V controller for 240x320 LCD panels
 
+config DRM_PANEL_XL6550050QM30
+	tristate "Xing Liang XL6550050QM-30 panel"
+	depends on OF
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for the Xing Liang
+	  XL6550050QM-30 panel
+
 endmenu
