arm64: dts: elvees: Add dma-ranges for PCIe
This commit allows to use PCIe devices if only DDR High
address ranges are available in Linux.

This commit is based on commit b845c2df3056 ("arm64: dts: elvees:
Add dma-ranges for PCIe").

Issue: #MCOM03SW-1369
Issue: #MCOM03SW-1677
Change-Id: If72362e17139720e88c0f920078ddf0b0031e23b
Signed-off-by: Vladimir Terekhov <vterekhov@elvees.com>

--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -1217,52 +1217,70 @@
 			};
 		};
 
-		pcie0: pcie@2000000 {
-			compatible = "elvees,mcom03-pcie";
-			reg = <0x0 0x2000000 0x0 0x400000>,
-			      <0x0 0x1a00000 0x0 0x800>,
-			      <0x0 0x60000000 0x0 0x10000000>;
-			reg-names = "dbi", "apb", "config";
-			#address-cells = <3>;
+		/* This node isn't real PCIe bus, but if it's name equals to "pcie", kernel will
+		 * handle it like "pci" value was set to the "device_type" property. The only way
+		 * to override this behaviour is to give the node another name. */
+		mcom03-pcie@0 {
+			compatible = "simple-bus";
+			#address-cells = <2>;
 			#size-cells = <2>;
-			device_type = "pci";
-			ranges = <0x83000000 0x0 0x00000000
-				  0x4 0x00000000
-				  0x1 0x00000000>;
-			num-viewport = <32>;
-			num-lanes = <4>;
-			// TODO: Legacy, HP, AER, etc. interrupts
-			interrupts = <GIC_SPI 89 IRQ_TYPE_LEVEL_HIGH>;
-			resets = <&sdr_reset SDR_RST_EXT_ICT>,
-				 <&sdr_reset SDR_RST_BBD_ICT>,
-				 <&sdr_reset SDR_RST_PCI_ICT>;
-			elvees,urb = <&sdr_urb>;
-			elvees,ctrl-id = <0>;
-			status = "disabled";
-		};
+			ranges;
 
-		pcie1: pcie@2400000 {
-			compatible = "elvees,mcom03-pcie";
-			reg = <0x0 0x2400000 0x0 0x400000>,
-			      <0x0 0x1d00000 0x0 0x800>,
-			      <0x0 0x70000000 0x0 0x10000000>;
-			reg-names = "dbi", "apb", "config";
-			#address-cells = <3>;
-			#size-cells = <2>;
-			device_type = "pci";
-			ranges = <0x83000000 0x0 0x00000000
-				  0x6 0x00000000
-				  0x1 0x00000000>;
-			num-viewport = <32>;
-			num-lanes = <4>;
-			// TODO: Legacy, HP, AER, etc. interrupts
-			interrupts = <GIC_SPI 95 IRQ_TYPE_LEVEL_HIGH>;
-			resets = <&sdr_reset SDR_RST_EXT_ICT>,
-				 <&sdr_reset SDR_RST_BBD_ICT>,
-				 <&sdr_reset SDR_RST_PCI_ICT>;
-			elvees,urb = <&sdr_urb>;
-			elvees,ctrl-id = <1>;
-			status = "disabled";
+			pcie0: pcie@2000000 {
+				compatible = "elvees,mcom03-pcie";
+				reg = <0x0 0x2000000 0x0 0x400000>,
+				      <0x0 0x1a00000 0x0 0x800>,
+				      <0x0 0x60000000 0x0 0x10000000>;
+				reg-names = "dbi", "apb", "config";
+				#address-cells = <3>;
+				#size-cells = <2>;
+				device_type = "pci";
+				ranges = <0x83000000 0x0 0x00000000
+					  0x4 0x00000000
+					  0x1 0x00000000>;
+				dma-ranges = <0x42000000 0x0 0x0 0x8 0x0
+					      0x2 0x80000000>,
+					     <0x42000000 0x4 0x0 0xc 0x0
+					      0x1 0x80000000>;
+				num-viewport = <32>;
+				num-lanes = <4>;
+				// TODO: Legacy, HP, AER, etc. interrupts
+				interrupts = <GIC_SPI 89 IRQ_TYPE_LEVEL_HIGH>;
+				resets = <&sdr_reset SDR_RST_EXT_ICT>,
+					 <&sdr_reset SDR_RST_BBD_ICT>,
+					 <&sdr_reset SDR_RST_PCI_ICT>;
+				elvees,urb = <&sdr_urb>;
+				elvees,ctrl-id = <0>;
+				status = "disabled";
+			};
+
+			pcie1: pcie@2400000 {
+				compatible = "elvees,mcom03-pcie";
+				reg = <0x0 0x2400000 0x0 0x400000>,
+				      <0x0 0x1d00000 0x0 0x800>,
+				      <0x0 0x70000000 0x0 0x10000000>;
+				reg-names = "dbi", "apb", "config";
+				#address-cells = <3>;
+				#size-cells = <2>;
+				device_type = "pci";
+				ranges = <0x83000000 0x0 0x00000000
+					  0x6 0x00000000
+					  0x1 0x00000000>;
+				dma-ranges = <0x42000000 0x0 0x0 0x8 0x0
+					      0x2 0x80000000>,
+					     <0x42000000 0x4 0x0 0xc 0x0
+					      0x1 0x80000000>;
+				num-viewport = <32>;
+				num-lanes = <4>;
+				// TODO: Legacy, HP, AER, etc. interrupts
+				interrupts = <GIC_SPI 95 IRQ_TYPE_LEVEL_HIGH>;
+				resets = <&sdr_reset SDR_RST_EXT_ICT>,
+					 <&sdr_reset SDR_RST_BBD_ICT>,
+					 <&sdr_reset SDR_RST_PCI_ICT>;
+				elvees,urb = <&sdr_urb>;
+				elvees,ctrl-id = <1>;
+				status = "disabled";
+			};
 		};
 
 		/* For DeviceTree bindings see linux/modules/velcore3
