--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0.dtsi
@@ -282,6 +282,11 @@ i2c_gp: &i2c2 {
 /* PCIe0 is connected to SATA controller. Should be enabled in carrier DTS. */
 sata: &pcie0 { };
 
+/* Serial port definitions for SMARC */
+ser1: &uart0 { };
+ser2: &uart2 { };
+ser3: &uart1 { };
+
 &qspi0 {
 	status = "okay";
 
