--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -195,6 +195,9 @@ CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_SPI=y
+CONFIG_SPI_DESIGNWARE=m
+CONFIG_SPI_DW_MMIO=m
+CONFIG_SPI_SPIDEV=m
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_MCP23S08=y
 CONFIG_MCOM03_PINCTRL=y
