arm64: dts: elvees: trustphonecb: Add SPI IMU sensor
LSM6DSx is a family of IMU sensors.

Issue: #MCOM03SW-1627
Change-Id: I6daa344b05389a07a090a8f039f5b74dc8d30b02

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
@@ -102,6 +102,16 @@
 				  "GPS_CUT", "VIBRO_CUT";
 	};
 
+	lsm6dsx: imu@2 {
+		compatible = "st,lsm6dsm";
+		reg = <2>;
+		// Maximum is 10 MHz, but lower here due to bad MISO signal
+		spi-max-frequency = <2000000>;
+
+		interrupt-parent = <&tca9554_0>;
+		interrupts = <0 IRQ_TYPE_EDGE_RISING>;
+	};
+
 	gnss@3 {
 		compatible = "u-blox,zoe-m8b-spi";
 		reg = <3>;
