arm64: mcom03_defconfig: Enable PM_DEVFREQ
We integrate governers inside kernel since modules
do not load automatically.

Besides the vendors such as arm and mips integrate
governors inside kernels but do not add as modules.

Issue: #SOLARISSW-1746
Issue: #MCOM03SW-1980
Change-Id: I616bbd451d078ff3f9f24b491f8a7a47df7f52fe
Signed-off-by: Georgy Macharadze <gmacharadze@elvees.com>
(cherry picked from commit 1af19e8af060492188d03e525446e904229d2fcb)

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -491,6 +491,12 @@ CONFIG_RTC_DRV_RV8803=m
 # CONFIG_HISILICON_ERRATUM_161010101 is not set
 # CONFIG_ARM64_ERRATUM_858921 is not set
 # CONFIG_IOMMU_SUPPORT is not set
+CONFIG_PM_DEVFREQ=y
+CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
+CONFIG_DEVFREQ_GOV_PERFORMANCE=y
+CONFIG_DEVFREQ_GOV_POWERSAVE=y
+CONFIG_DEVFREQ_GOV_USERSPACE=y
+CONFIG_DEVFREQ_GOV_PASSIVE=y
 CONFIG_RESET_CONTROLLER=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
