arm64: dts: elvees: Add dma-ranges for GPU
GPU in media subsystem can only address 4 GB.
To access DDR High address ranges a mapping must be configured
for these device. This commit adds a description of DMA32 bus,
which should contain description of GPU device. The mapping is
configured using 'dma-ranges' property, which is set to map
physical addresses 0x8_0000_0000 - 0x8_ffff_ffff to
0x0 - 0xffff_ffff, available to 32-bit GPU.

Issue: #MCOM03SW-812
Issue: #MCOM03SW-1518
Change-Id: I02025facdc9b3226378e7619f66a6aa2dfd0285c

--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -296,6 +296,7 @@
 		#address-cells = <2>;
 		#size-cells = <2>;
 		ranges;
+		dma-ranges;
 
 		media_urb: urb@1320000 {
 			compatible = "elvees,mcom03-urb", "syscon", "simple-mfd";
@@ -415,16 +416,23 @@
 			#clock-cells = <1>;
 		};
 
-		gpu: gpu@1200000 {
-			clocks = <&media_ucg2 MEDIA_GPU_SYS_CLK>,
-				 <&media_ucg2 MEDIA_GPU_MEM_CLK>,
-				 <&media_ucg2 MEDIA_GPU_CORE_CLK>;
-			clock-names = "sys", "mem", "core";
-			compatible = "img,gpu";
-			interrupts = <GIC_SPI 13 IRQ_TYPE_LEVEL_HIGH>;
-			reg = <0 0x1200000 0 0x80000>;
-			resets = <&media_reset MEDIA_RST_GPU>;
-			status = "okay";
+		gpu@0 {
+			compatible = "elvees,mcom03-dma32", "simple-bus";
+			#address-cells = <2>;
+			#size-cells = <2>;
+			ranges;
+			dma-ranges = <0 0 8 0 1 0>;
+			gpu: gpu@1200000 {
+				clocks = <&media_ucg2 MEDIA_GPU_SYS_CLK>,
+					 <&media_ucg2 MEDIA_GPU_MEM_CLK>,
+					 <&media_ucg2 MEDIA_GPU_CORE_CLK>;
+				clock-names = "sys", "mem", "core";
+				compatible = "img,gpu";
+				interrupts = <GIC_SPI 13 IRQ_TYPE_LEVEL_HIGH>;
+				reg = <0 0x1200000 0 0x80000>;
+				resets = <&media_reset MEDIA_RST_GPU>;
+				status = "okay";
+			};
 		};
 
 		vpu: vpu@1280000 {
