iio: adc: Add ADS1110 ADC drivers
There is no driver in upstream branch.
Driver from https://www.spinics.net/lists/linux-iio/msg04099.html
has been added.

Issue: #MCOM03SW-1247
Change-Id: Ic5bada2859fc289fddf74f010e413df381353a3e

--- a/drivers/iio/adc/Kconfig
+++ b/drivers/iio/adc/Kconfig
@@ -835,6 +835,16 @@ config TI_ADS1015
 	  This driver can also be built as a module. If so, the module will be
 	  called ti-ads1015.
 
+config TI_ADS1110
+	tristate "Texas Instruments ADS1110 Analog Digital Converter"
+	depends on I2C
+	help
+	  If you say yes here you get support for Texas Instruments ADS1110
+	  ADC chip.
+
+	  This driver can also be built as a module. If so, the module will be
+	  called ti-ads1110.
+
 config TI_ADS7950
 	tristate "Texas Instruments ADS7950 ADC driver"
 	depends on SPI
