arm64: dts: elvees: ecam03bl: Describe I2C ADC
Issue: #MCOM03SW-1247
Change-Id: I67f9dc56891caa0c1ace428670c7cf487131a79f

--- a/arch/arm64/boot/dts/elvees/mcom03-ecam03bl-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-ecam03bl-r1.0.dts
@@ -66,3 +66,13 @@
 &i2s0 {
 	status = "okay";
 };
+
+&i2c3 {
+	clock-frequency = <400000>;
+	status = "okay";
+
+	adc@4f {
+		compatible = "ti,ads1110";
+		reg = <0x4f>;
+	};
+};
