--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -289,6 +289,7 @@ CONFIG_W1_SLAVE_SMEM=m
 CONFIG_SENSORS_MR75202=y
 CONFIG_SENSORS_LM73=m
 CONFIG_SENSORS_EMC2305=m
+CONFIG_SENSORS_INA260=m
 CONFIG_WATCHDOG=y
 CONFIG_DW_WATCHDOG=y
 CONFIG_MCOM03_WATCHDOG=y
