hwmon: Add TI INA260 driver
INA260 is an I2C and SMBus-compatible Digital Current/Power Monitor with
an integrated precision shunt resistor.

Driver based on ina2xx.c. INA260 has different registers definitions so
it's quite difficult to add support INA260 to existing ina2xx.c driver.

Issue: #MCOM03SW-1750
Change-Id: If964b15be3b9817bd8eed1f7e14a99ca72cf8ad6
Signed-off-by: Timur Prokopenko <tprokopenko@elvees.com>

--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1800,6 +1800,18 @@ config SENSORS_INA2XX
 	  This driver can also be built as a module. If so, the module
 	  will be called ina2xx.
 
+config SENSORS_INA260
+	tristate "Texas Instruments INA260 and compatibles"
+	depends on I2C
+	select REGMAP_I2C
+	help
+	  If you say yes here you get support for TI INA260 power monitor.
+
+	  The INA260 driver is configured for the default configuration of
+	  the part as described in the datasheet.
+	  This driver can also be built as a module.  If so, the module
+	  will be called ina260.
+
 config SENSORS_INA3221
 	tristate "Texas Instruments INA3221 Triple Power Monitor"
 	depends on I2C
