arm64: dts: elvees: trustphonecb: Add aliases for sensor I2C
Image sensors are controlled by I2C via I2C multiplexer.
Sensor drivers need fixed I2C numbers.

Issue: #MCOM03SW-1253
Change-Id: I57a7189dea2b32be5997ee89eae6536eeee7bcd5

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
@@ -20,6 +20,11 @@
 		     "elvees,trustphonepm",
 		     "elvees,mcom03";
 
+	aliases {
+		i2c5 = &i2c_camr;
+		i2c6 = &i2c_camf;
+	};
+
 	trustphonecb-leds {
 		compatible = "gpio-leds";
 
