--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
@@ -20,6 +20,11 @@
 		     "elvees,trustphonepm",
 		     "elvees,mcom03";
 
+	aliases {
+		i2c5 = &i2c_camr;
+		i2c6 = &i2c_camf;
+	};
+
 	trustphonecb-leds {
 		compatible = "gpio-leds";
 
