backlight: Add lm3692x backlight driver
This is temprorary driver for Kernel 4.19. In newer kernels should be
used led_bl driver that allows to use leds drivers for backlight purposes.

Issue: #MCOM03SW-1358
Change-Id: Ia1cb310d129986954c4131a0e2f1c6e2c4a08374

--- a/drivers/video/backlight/Kconfig
+++ b/drivers/video/backlight/Kconfig
@@ -397,6 +397,13 @@ config BACKLIGHT_LM3639
 	help
 	  This supports TI LM3639 Backlight + 1.5A Flash LED Driver
 
+config BACKLIGHT_LM3692X
+	tristate "LM3692x backlight driver"
+	depends on BACKLIGHT_CLASS_DEVICE && I2C
+	select REGMAP_I2C
+	help
+	  Say y to enable the LM3692x backlight driver.
+
 config BACKLIGHT_LP855X
 	tristate "Backlight driver for TI LP855X"
 	depends on BACKLIGHT_CLASS_DEVICE && I2C && PWM
