--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -412,6 +412,7 @@ CONFIG_DRM_DP_CEC=y
 CONFIG_DRM_MALI_DISPLAY=y
 CONFIG_DRM_UDL=m
 CONFIG_DRM_PANEL_SIMPLE=y
+CONFIG_DRM_PANEL_XL6550050QM30=y
 CONFIG_DRM_TOSHIBA_TC358762=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_I2C_ADV7511_AUDIO=y
@@ -419,6 +420,7 @@ CONFIG_DRM_I2C_ADV7511_AUDIO=y
 CONFIG_DRM_MCOM03_DISPLAY_ENCODER=y
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
+CONFIG_BACKLIGHT_LM3692X=y
 CONFIG_BACKLIGHT_GPIO=y
 CONFIG_SOUND=m
 CONFIG_SND=m
