--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -145,6 +145,8 @@ CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=128
+CONFIG_GNSS=m
+CONFIG_GNSS_UBLOX_SPI=m
 CONFIG_MTD=y
 CONFIG_MTD_TESTS=m
 CONFIG_MTD_CMDLINE_PARTS=y
