arm64: dts: elvees: trustphone: Enable touch panel for XL6550050QM
Touch panel and XL6550050QM DSI panel drivers uses the same power supply.

Issue: #MCOM03SW-1781
Change-Id: Icbd7c1d82fc69531d50c2d36c04f9a89e2d11d65

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1-xl6550050qm.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1-xl6550050qm.dts
@@ -37,6 +37,19 @@
 			default-brightness-level = <255>;
 		};
 	};
+
+	ft8006: touchscreen@38 {
+		compatible = "focaltech,ft8006";
+		reg = <0x38>;
+		interrupt-parent = <&tca9554_0>;
+		interrupts = <5 IRQ_TYPE_EDGE_BOTH>;
+		reset-gpios = <&tca9554_1 2 GPIO_ACTIVE_LOW>;
+		touchscreen-size-x = <720>;
+		touchscreen-size-y = <1600>;
+		touchscreen-x-mm = <70>;
+		touchscreen-y-mm = <157>;
+		power-supply = <&display_regulator>;
+	};
 };
 
 &i2c4 {
