--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -202,6 +202,9 @@ CONFIG_GPIO_SYSFS=y
 CONFIG_PINCTRL_DWAPB=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
+CONFIG_W1=m
+CONFIG_W1_MASTER_DS2482=m
+CONFIG_W1_SLAVE_SMEM=m
 CONFIG_SENSORS_MR75202=y
 CONFIG_WATCHDOG=y
 CONFIG_DW_WATCHDOG=y
